feat: publish markdown reports alongside HTML, add download link in nav

--- a/reports/ai-report-2026-02-20-zh.html
+++ b/reports/ai-report-2026-02-20-zh.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AI 熱門議題日報 — 2026-02-20</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Newsreader:opsz,wght@6..72,400;6..72,600&family=Outfit:wght@300;400;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../style.css">
 </head>
 <body>
@@ -12,6 +15,7 @@
     <nav class="report-nav">
         <a href="../index.html">&larr; 所有報告</a>
         <a href="ai-report-2026-02-20.html">English</a>
+        <a href="ai-report-2026-02-20-zh.md" download>Markdown</a>
     </nav>
 
     <div class="markdown-body">
@@ -20,10 +24,10 @@
 <p>本報告由 Grok AI 自動生成，基於 X (Twitter) 平台當日熱門 AI 討論內容。</p>
 </blockquote>
 <hr />
-<h2 id="_1">執行摘要</h2>
+<h2 id="_1">📋 執行摘要</h2>
 <p>今日的 AI 領域呈現出向自主代理（autonomous agents）激進轉向的特徵，其標誌性事件包括 OpenAI 策略性地聘請了 OpenClaw 創始人 Peter Steinberger，以及推出了 Codex 5.3 Mac 應用程式。Anthropic 在打擊第三方 OAuth 令牌（tokens）後正面臨開發者的強烈抵制，此舉引發了向 OpenAI 和 xAI 的遷移潮。同時，xAI 的 Grok 4.1 Thinking 在 LMSYS 排行榜上奪得榜首，預示著高推理「LLM Council」架構新時代的到來。Anthropic 的 Claude Sonnet 4.6 推出了 100 萬標記（token）的上下文窗口，旨在消除「代理失憶症」（agent amnesia），儘管該公司正因五角大廈在一場備受矚目的軍事行動中使用其模型而陷入內部爭議。總體而言，產業正從被動助手轉向整合進企業和國家安全框架的高風險自主「AI 員工」。</p>
 <hr />
-<h2 id="_2">今日熱門議題</h2>
+<h2 id="_2">🔥 今日熱門議題</h2>
 <h3 id="1-anthropic-oauth-opencode">1. Anthropic 打擊第三方 OAuth 與 「OpenCode」 遷移潮</h3>
 <p><strong>Category:</strong> Policy <span class="heat-badge heat-high">High</span></p>
 <p><strong>概要：</strong> 2026 年 2 月 20 日，Anthropic 強制執行了一項具爭議性的政策更新，禁止在第三方應用程式和代理框架中使用個人 Claude 訂閱的 OAuth 令牌（包括 Free、Pro 和 Max 層級）。此舉實際上停用了如 OpenCode、OpenClaw 和 Conductor 等熱門工具，這些工具原本允許用戶利用其固定費率的訂閱來處理高流量的「代理編碼」（agentic coding）任務，而非支付按標記計費的 API 費用。這項執法立即引發了開發者社群的「割韭菜」（rug pull）指責，特別是那些最近剛升級到 Claude Max 層級以使用 Opus 4.6 模型的用戶。作為回應，OpenCode 提交了一項移除 Claude 支援的變更，而 OpenAI 則藉此機會聘請了 OpenClaw 創始人 Peter Steinberger，並將 GPT-5.3 Codex 定位為開發者的開放替代方案。</p>
@@ -344,10 +348,10 @@
 <li><a target="_blank" rel="noopener noreferrer" href="https://www.wallstreetprep.com/knowledge/ranking-the-best-ai-tools-for-financial-modeling-2026/">Ranking the Best AI Tools for Financial Modeling 2026</a></li>
 </ul>
 <hr />
-<h2 id="_3">趨勢總結</h2>
+<h2 id="_3">📊 趨勢總結</h2>
 <p>隨著通用模型在金融領域（如 Shortcut AI）和低延遲編碼領域（如 Kimi K2.5）開始失守，明顯的「垂直化」和「標準化」模式正在顯現。社群正迅速圍繞 .agents/skills 等開放標準整合，以確保代理的便攜性，這在 OpenAI 的生態友好方法與 Anthropic 日益增長的「圍牆花園」策略之間形成了鮮明對比。我們看到「行動層」（Action Layer）成為人才和市場份額的主要戰場，Claude Code 等代理工具的營收達到了前所未有的數十億美元年化規模。此外，LLM 成功整合進機密戰鬥行動表明，「主權 AI」和國家安全指令正開始超越私營實驗室的倫理安全框架。這一轉變預示著 AI 增長的下一階段將由具備主動性、長效記憶且能在極少人為監督下執行複雜多步驟工作流的代理所驅動。</p>
 <hr />
-<h2 id="kol">KOL 觀點追踪</h2>
+<h2 id="kol">🎤 KOL 觀點追踪</h2>
 <p>2026 年 2 月 20 日，AI 領域 KOL 的集體情緒特徵是從對模型的單純興奮轉向對基礎設施、經濟學和代理式工作流的務實探討。一個主要主題是基準測試的演進，Gemini 3.1 Pro 在 ARC-AGI 上展現了主導性能，儘管 Greg Kamradt 等專家建議產業必須超越靜態基礎模型，轉向持續學習和上下文壓縮。人們顯著關注「代理時代」，討論範圍從 Cursor 等工具對 macOS 級別依賴的脆弱性，到 Dreamer 等代理混編平台卓越的用戶體驗（UX）。然而，經濟現實主義的暗流也正在顯現，如 Bindu Reddy 觀察到 AI 生產成本正開始與人力成本抗衡，這信號表明 AI 開發者工具市場可能趨於成熟或面臨修正。</p>
 <h3 id="simonw-simon-willison">@@simonw — Simon Willison</h3>
 <blockquote>
@@ -428,7 +432,7 @@
 <p><strong>討論主題：</strong> Gemini, Codex 5.3, AI 經濟學, 標記定價, 模型可用性</p>
 <hr />
 <hr />
-<h2 id="_4">重要引用</h2>
+<h2 id="_4">💬 重要引用</h2>
 <blockquote>
 <p>「Peter Steinberger 是一位天才。我們非常激動能邀請他加入 OpenAI，幫助我們構建自主代理的未來。」("Peter Steinberger is a genius. We are thrilled to have him join OpenAI to help us build the future of autonomous agents.")
 — <strong>Sam Altman</strong> (OpenAI 收購爆紅框架 OpenClaw 背後人才後的公開聲明。)</p>
@@ -448,7 +452,7 @@
 — <strong>@elonmusk</strong> (在 Grok 4.1 登頂 LMSYS 排行榜後，預告 xAI 的下一個架構飛躍。)</p>
 </blockquote>
 <hr />
-<h2 id="_5">參考來源</h2>
+<h2 id="_5">🔗 參考來源</h2>
 <table>
 <thead>
 <tr>
@@ -719,11 +723,12 @@
     </div>
 
     <footer class="site-footer">
-        <p>生成時間：2026-02-20 21:18:25</p>
+        <p>生成時間：2026-03-01 09:00:31</p>
     </footer>
 
 </div>
 <script>
+/* Wrap h3 topic sections into .topic-card divs for consistent styling */
 (function(){
     var body = document.querySelector('.markdown-body');
     if (!body) return;
@@ -731,6 +736,7 @@
     h3s.forEach(function(h3) {
         var card = document.createElement('div');
         card.className = 'topic-card';
+        /* Propagate heat level to card */
         var badge = h3.querySelector('.heat-high,.heat-medium,.heat-low');
         if (badge) {
             if (badge.classList.contains('heat-high')) card.dataset.heat = 'high';
@@ -739,6 +745,7 @@
         }
         h3.parentNode.insertBefore(card, h3);
         card.appendChild(h3);
+        /* Collect siblings until next hr, h2, h3, or end */
         while (card.nextSibling) {
             var next = card.nextSibling;
             if (next.nodeType === 1) {
@@ -748,6 +755,7 @@
             card.appendChild(next);
         }
     });
+    /* Remove leftover <hr> between cards (now redundant) */
     body.querySelectorAll('hr').forEach(function(hr) {
         var prev = hr.previousElementSibling;
         if (prev && prev.classList.contains('topic-card')) hr.remove();
