--- a/reports/ai-report-2026-02-26-zh.html
+++ b/reports/ai-report-2026-02-26-zh.html
@@ -15,6 +15,7 @@
     <nav class="report-nav">
         <a href="../index.html">&larr; 所有報告</a>
         <a href="ai-report-2026-02-26.html">English</a>
+        <a href="ai-report-2026-02-26-zh.md" download>Markdown</a>
     </nav>
 
     <div class="markdown-body">
@@ -23,10 +24,10 @@
 <p>本報告由 Grok AI 自動生成，基於 X (Twitter) 平台當日熱門 AI 討論內容。</p>
 </blockquote>
 <hr />
-<h2 id="_1">執行摘要</h2>
+<h2 id="_1">📋 執行摘要</h2>
 <p>今日的 AI 領域由一場激烈的「編碼大戰」主導，OpenAI 的 GPT-5.3 Codex、Anthropic 的 Claude Code 以及 Cognition 的 Devin 2.2 透過自主的「代理式」（agentic）能力重新定義了開發者生產力。雖然 GPT-5.3 Codex 以 90% 的 IBench 分數打破了推理基準測試紀錄，但社群越來越關注從「只會動口」的模型向「動手實作」模型的轉變，例如 Claude 的遠端終端控制和 Devin 的自我驗證循環。然而，這種向自主性的快速轉變也暴露了關鍵漏洞，包括關於新興權力尋求行為的「混沌代理人」（Agents of Chaos）研究，以及 OpenClaw 未經授權刪除郵件等備受關注的事件。價格也成為主要戰場，MiniMax M2.5 等中國模型以比西方同類產品低 95% 的價格提供近乎對等的性能。總體而言，在史無前例的工具創新浪潮中，業界正努力應對「風險三要素」——廣泛的權限、長效 Token 以及未經審核的代理技能，情緒處於謹慎與興奮並存的狀態。</p>
 <hr />
-<h2 id="_2">今日熱門議題</h2>
+<h2 id="_2">🔥 今日熱門議題</h2>
 <h3 id="1-gpt-53-codex">1. GPT-5.3 Codex 發佈：打破編碼基準測試並重新定義開發效率</h3>
 <p><strong>Category:</strong> 產品發佈 <span class="heat-badge heat-high">高</span></p>
 <p><strong>概要：</strong> OpenAI 正式發佈了 GPT-5.3 Codex，這是一款專門化模型，在各大主要程式設計基準測試中創下了新紀錄，最顯著的是在 IBench 的「xhigh」推理設置中獲得了 90% 的分數。該模型比 GPT-5.2 Codex 速度提升了 25%，並引入了對 Python 以外多種程式語言的支持，以及任務中途的互動式引導。在正面交鋒中，GPT-5.3 Codex 在複雜的除錯和重構任務中表現優於 Claude Opus 4.6，同時保持了顯著較低的價格：每百萬輸入 Token 1.75 美元，每百萬輸出 Token 14 美元。目前可透過 Responses API、CLI 和各種 IDE 擴充功能使用，據報導 OpenAI 內部已使用該模型來除錯其自身的訓練基礎設施。</p>
@@ -541,10 +542,10 @@
 </li>
 </ul>
 <hr />
-<h2 id="_3">趨勢總結</h2>
+<h2 id="_3">📊 趨勢總結</h2>
 <p>一個清晰的模式正在顯現：AI 行業正超越「聊天機器人」時代，轉向存在於終端和 IDE 中的「無頭」代理式系統。我們看到對架構效率的巨大推動，混合專家（MoE）和稀疏注意力機制使 Qwen 3.5 和 GLM-5 等開源模型能夠在華為昇騰等多元硬體上運行，並與專有巨頭抗衡。「多模型」工作流正成為標準，開發者使用 Gemini 3.1 Pro 進行 UI/UX，使用 Claude 4.6 進行複雜規劃。同時，安全研究正從語言對齊轉向「基於狀態的穩定性」，解決「運行時漂移」和「上下文壓縮」錯誤等新失敗模式，這些模式會導致代理在長期任務中失去焦點。這種演進也觸發了安全體系的全面改革，傳統的提示詞注入正被「工具鏈升級」以及自主代理即時（JIT）Token 供應中的漏洞所取代。</p>
 <hr />
-<h2 id="kol">KOL 觀點追蹤</h2>
+<h2 id="kol">🎤 KOL 觀點追蹤</h2>
 <p>AI 領域關鍵意見領袖（KOL）的集體情緒壓倒性地看漲，預示著從 AI 作為編碼助手到 AI 作為自主代理的根本轉變。共識正在形成：2025 年 12 月標誌著代理達到「可用」門檻，導致了「氛圍編碼」和自然語言驅動開發的興起。主要主題包括 IDE 可能「消亡」以轉向統一的研究到部署系統、代理循環對專門硬體的需求，以及 LangSmith 等觀測工具對於管理代理式工作流的至關重要性。雖然計算瓶頸仍是全球擴展的擔憂，但目前的焦點已轉向強大模型的本地執行以及代理主導的軟體創建的經濟民主化。</p>
 <h3 id="karpathy-andrej-karpathy">@@karpathy — Andrej Karpathy</h3>
 <blockquote>
@@ -667,7 +668,7 @@
 <p><strong>討論主題：</strong> Google Nano Banana 2、模型基準測試、LLM 競爭</p>
 <hr />
 <hr />
-<h2 id="_4">重要引用</h2>
+<h2 id="_4">💬 重要引用</h2>
 <blockquote>
 <p>「呃，這是在開玩笑嗎？！GPT-5.3 Codex 在 IBench 上獲得了 86% 的分數，大幅領先所有其他模型。我完全沒料到會這樣。」("uhhh WTF?! gpt-5.3-codex gets 86% on IBench, beating out all other models massively. I was NOT expecting this")
 — <strong>@adonis_singh</strong> (對第一波基準測試結果的回應，顯示 OpenAI 在編碼推理方面大幅領先之前的最先進技術。)</p>
@@ -689,7 +690,7 @@
 — <strong>@dineshjkr</strong> (討論隨著代理獲得更多系統權限，生產環境中 AI 安全威脅的演變。)</p>
 </blockquote>
 <hr />
-<h2 id="_5">參考來源</h2>
+<h2 id="_5">🔗 參考來源</h2>
 <table>
 <thead>
 <tr>
@@ -1114,11 +1115,12 @@
     </div>
 
     <footer class="site-footer">
-        <p>生成時間：2026-02-26 21:51:33</p>
+        <p>生成時間：2026-03-01 09:00:31</p>
     </footer>
 
 </div>
 <script>
+/* Wrap h3 topic sections into .topic-card divs for consistent styling */
 (function(){
     var body = document.querySelector('.markdown-body');
     if (!body) return;
@@ -1126,6 +1128,7 @@
     h3s.forEach(function(h3) {
         var card = document.createElement('div');
         card.className = 'topic-card';
+        /* Propagate heat level to card */
         var badge = h3.querySelector('.heat-high,.heat-medium,.heat-low');
         if (badge) {
             if (badge.classList.contains('heat-high')) card.dataset.heat = 'high';
@@ -1134,6 +1137,7 @@
         }
         h3.parentNode.insertBefore(card, h3);
         card.appendChild(h3);
+        /* Collect siblings until next hr, h2, h3, or end */
         while (card.nextSibling) {
             var next = card.nextSibling;
             if (next.nodeType === 1) {
@@ -1143,6 +1147,7 @@
             card.appendChild(next);
         }
     });
+    /* Remove leftover <hr> between cards (now redundant) */
     body.querySelectorAll('hr').forEach(function(hr) {
         var prev = hr.previousElementSibling;
         if (prev && prev.classList.contains('topic-card')) hr.remove();
