--- a/reports/ai-report-2026-02-27.html
+++ b/reports/ai-report-2026-02-27.html
@@ -15,10 +15,11 @@
     <nav class="report-nav">
         <a href="../index.html">&larr; All Reports</a>
         <a href="ai-report-2026-02-27-zh.html">中文版</a>
+        <a href="ai-report-2026-02-27.md" download>Markdown</a>
     </nav>
 
     <h1>AI Hot Topics Daily Report — 2026-02-27</h1>
-    <p class="report-meta">Generated at 2026-02-27 21:21:10 &middot; Source: X (Twitter)</p>
+    <p class="report-meta">Generated at 2026-03-01 09:00:31 &middot; Source: X (Twitter)</p>
 
     
     <section>
@@ -1506,7 +1507,7 @@
     
 
     <footer class="site-footer">
-        <p>Generated at 2026-02-27 21:21:10</p>
+        <p>Generated at 2026-03-01 09:00:31</p>
     </footer>
 
 </div>
