--- a/reports/ai-report-2026-02-28-v5-zh.html
+++ b/reports/ai-report-2026-02-28-v5-zh.html
@@ -15,6 +15,7 @@
     <nav class="report-nav">
         <a href="../index.html">&larr; 所有報告</a>
         <a href="ai-report-2026-02-28-v5.html">English</a>
+        <a href="ai-report-2026-02-28-v5-zh.md" download>Markdown</a>
     </nav>
 
     <div class="markdown-body">
@@ -146,7 +147,7 @@ The user wants me to translate a Markdown report from English to Traditional Chi
     </div>
 
     <footer class="site-footer">
-        <p>生成時間：2026-03-01 07:50:49</p>
+        <p>生成時間：2026-03-01 09:00:31</p>
     </footer>
 
 </div>
