--- a/reports/ai-report-2026-02-27-zh.html
+++ b/reports/ai-report-2026-02-27-zh.html
@@ -15,6 +15,7 @@
     <nav class="report-nav">
         <a href="../index.html">&larr; 所有報告</a>
         <a href="ai-report-2026-02-27.html">English</a>
+        <a href="ai-report-2026-02-27-zh.md" download>Markdown</a>
     </nav>
 
     <div class="markdown-body">
@@ -1052,7 +1053,7 @@
     </div>
 
     <footer class="site-footer">
-        <p>生成時間：2026-02-27 21:21:10</p>
+        <p>生成時間：2026-03-01 09:00:31</p>
     </footer>
 
 </div>
